--- a/src/styles/styling.css
+++ b/src/styles/styling.css
@@ -1,12 +1,3 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
-  letter-spacing: 1.3px;
-}
-
 body {
   position: relative;
   /* background-color: #0c0c0c; */
@@ -51,8 +42,7 @@ body {
 .hero-slide__item {
   width: 100%;
   position: relative;
-  /* display: flex; */
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .hero-slide__item::before {
@@ -102,6 +92,7 @@ body {
   color: red;
   text-transform: uppercase;
   padding-bottom: 10px;
+  font-weight: bold;
 }
 .hero__text p {
   color: rgb(235, 235, 235);
@@ -115,14 +106,152 @@ body {
 
 .hero-slide__item-img {
   max-width: 23%;
-  /* transform: scale(0);
-  -webkit-transform: scale(0);
-  -moz-transform: scale(0);
-  -ms-transform: scale(0);
-  -o-transform: scale(0);
-  transition: 0.7s ease;
-  -webkit-transition: 0.7s ease;
-  -moz-transition: 0.7s ease;
-  -ms-transition: 0.7s ease;
-  -o-transition: 0.7s ease; */
+}
+
+/* SEARCH BAR */
+.input__search {
+  min-height: 15vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  background-color: #0c0c0c;
+}
+
+.input__search--wrapper {
+  width: 45%;
+}
+
+.input__search--wrapper input {
+  outline: none;
+  width: 100%;
+  min-width: 300px;
+  padding: 10px;
+  font-size: 1rem;
+  background-color: #0c0c0c;
+  color: rgb(236, 0, 0);
+  border: 2px solid #686868;
+}
+
+.input__search--wrapper input::placeholder {
+  color: #686868;
+}
+
+.input__search--wrapper input:focus {
+  border: 2px solid rgb(236, 0, 0);
+}
+
+.input__search--wrapper .material-icons {
+  position: absolute;
+  color: #686868;
+  left: 70%;
+  bottom: 50px;
+}
+
+/**
+ * ----------------------------------------
+ * animation fade-in
+ * ----------------------------------------
+ */
+.fade-in {
+  -webkit-animation: fade-in 1.5s cubic-bezier(0.47, 0, 0.745, 0.715) both;
+  animation: fade-in 1.5s cubic-bezier(0.47, 0, 0.745, 0.715) both;
+}
+
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+/* THUMB POSTER MOVIE */
+.grid__image {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  cursor: pointer;
+}
+
+.grid__image::before {
+  content: "";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  bottom: 4px;
+  right: 0;
+  transition: all ease 0.4s;
+  -webkit-transition: all ease 0.4s;
+  -moz-transition: all ease 0.4s;
+  -ms-transition: all ease 0.4s;
+  -o-transition: all ease 0.4s;
+}
+
+.grid__image:hover::before {
+  backdrop-filter: blur(2px);
+  opacity: 1;
+  background-color: rgba(3, 3, 3, 0.61);
+}
+
+.grid__image span {
+  clip-path: polygon(100% 0%, 100% 100%, 51% 68%, 0 99%, 0% 50%, 0 0);
+  position: absolute;
+  background-color: gold;
+  right: 0;
+  color: rgb(0, 0, 0);
+  font-size: 0.75rem;
+  text-align: center;
+  width: 25px;
+  height: 25px;
+  padding: 3px;
+  font-weight: bold;
+}
+
+.grid__image--info {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  height: 100%;
+  width: 100%;
+  color: rgb(255, 255, 255);
+  z-index: 10;
+  top: 0;
+  opacity: 0;
+  transition: all ease-in-out 0.7s;
+  -webkit-transition: all ease-in-out 0.7s;
+  -moz-transition: all ease-in-out 0.7s;
+  -ms-transition: all ease-in-out 0.7s;
+  -o-transition: all ease-in-out 0.7s;
+}
+
+.grid__image:hover .grid__image--info {
+  opacity: 1;
+}
+
+.grid__image--info p {
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  margin-bottom: 5px;
+  font-weight: bold;
+  padding: 0 10px;
+}
+
+.grid__image--info small {
+  font-size: 0.6rem;
+  font-weight: bold;
 }
